--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -11,7 +11,7 @@
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -28,7 +28,14 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut nulla laboriosam dicta quis dignissimos suscipit excepturi eveniet incidunt minima, doloremque quod deserunt atque ipsum reiciendis sunt earum tempore odit. Veritatis?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, hic porro adipisci aliquid asperiores nulla necessitatibus, nesciunt quod expedita commodi dignissimos, cupiditate ad voluptatum! Tempore maiores quas ad aliquid dolorem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam dolorum illum minima eius nemo perspiciatis sequi explicabo dicta molestiae deleniti odit ratione, fuga alias, voluptates blanditiis eum quam iste.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut nulla laboriosam dicta quis dignissimos suscipit excepturi eveniet incidunt minima, doloremque quod deserunt atque ipsum reiciendis sunt earum tempore odit. Veritatis?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, hic porro adipisci aliquid asperiores nulla necessitatibus, nesciunt quod expedita commodi dignissimos, cupiditate ad voluptatum! Tempore maiores quas ad aliquid dolorem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam dolorum illum minima eius nemo perspiciatis sequi explicabo dicta molestiae deleniti odit ratione, fuga alias, voluptates blanditiis eum quam iste.     
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut nulla laboriosam dicta quis dignissimos suscipit excepturi eveniet incidunt minima, doloremque quod deserunt atque ipsum reiciendis sunt earum tempore odit. Veritatis?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, hic porro adipisci aliquid asperiores nulla necessitatibus, nesciunt quod expedita commodi dignissimos, cupiditate ad voluptatum! Tempore maiores quas ad aliquid dolorem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam dolorum illum minima eius nemo perspiciatis sequi explicabo dicta molestiae deleniti odit ratione, fuga alias, voluptates blanditiis eum quam iste.     
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut nulla laboriosam dicta quis dignissimos suscipit excepturi eveniet incidunt minima, doloremque quod deserunt atque ipsum reiciendis sunt earum tempore odit. Veritatis?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, hic porro adipisci aliquid asperiores nulla necessitatibus, nesciunt quod expedita commodi dignissimos, cupiditate ad voluptatum! Tempore maiores quas ad aliquid dolorem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam dolorum illum minima eius nemo perspiciatis sequi explicabo dicta molestiae deleniti odit ratione, fuga alias, voluptates blanditiis eum quam iste.     
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut nulla laboriosam dicta quis dignissimos suscipit excepturi eveniet incidunt minima, doloremque quod deserunt atque ipsum reiciendis sunt earum tempore odit. Veritatis?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, hic porro adipisci aliquid asperiores nulla necessitatibus, nesciunt quod expedita commodi dignissimos, cupiditate ad voluptatum! Tempore maiores quas ad aliquid dolorem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora quibusdam dolorum illum minima eius nemo perspiciatis sequi explicabo dicta molestiae deleniti odit ratione, fuga alias, voluptates blanditiis eum quam iste.     
+        </p>
     </main>
 </body>
 </html>
