--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -5,13 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de Iframe</title>
+    <style>
+        iframe {
+            width: 400px;
+            height: 400px;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de iframe</h1>
     <p>
         Acessando o site do 
 
-        <iframe src="https://www.cursoemvideo.com" frameborder="0">
+        <!--Tamanho padrao 300x150-->
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500" scolling="no">
             <a href="https://www.cursoevideo.com" target="_blank"> Curso em Video</a>
         </iframe>
         
@@ -22,7 +30,7 @@
 
         <p>O repositorio do Guanabara
 
-            <iframe src="https://gustavoguanabara.github.io" frameborder="0">
+            <iframe src="https://gustavoguanabara.github.io" frameborder="0" height="500" width="500">
                 no <a href="https://gustavoguanabara.github.io" target="_blank">GitHub</a>
             </iframe>
         </p>
