--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -31,7 +31,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit distinctio saepe, officiis corrupti quis eius deserunt ratione et quae eos, expedita corporis dolorum ipsam numquam illum repellat veniam eligendi doloribus. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex velit quia unde cumque aspernatur optio inventore quas culpa libero magni consequatur, est delectus quidem accusantium officia consectetur nihil. Molestias, necessitatibus.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opcoes acima</h1><p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio minima architecto non saepe sapiente facilis eaque, commodi, facere, illum iusto ratione earum. Explicabo numquam consectetur, distinctio impedit optio quis assumenda!</p><img src= 'imagens/cursoemvideo.png'>">
         <p>Infelizmente seu navegador nao e compativel com isso</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque nostrum eos dolorum eum, adipisci illum sint laudantium dolore distinctio ipsum alias, expedita pariatur veniam qui accusamus quaerat eligendi eaque obcaecati! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam distinctio, tenetur voluptas nostrum quam sequi, excepturi facere laboriosam molestias amet eius obcaecati labore culpa assumenda minus rerum. Hic, mollitia illum!</p>
     </iframe>
